# Flask-application-using-Dash-and-PostgreSQL

./: Dockerfile  LICENSE.md  README.md  compose.yaml  init_conf.sh  local.env  pyproject.toml  requirements.txt  stock1.sql  stock2.sql  stock3.sql  stock4.sql
take_home_project/: __init__.py  db_helper.py  main.py
take_home_project/models/: models.py
